Fix width on narrow pages

--- a/custom.scss
+++ b/custom.scss
@@ -109,6 +109,7 @@ ul.pagination {
 }
 
 #quarto-document-content {
+  width: 100%;
   max-width: 800px;
   margin-left: auto;
   margin-right: auto;
